# tumor-drug-response-prediction

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
outputs/: data_manifest.json
scripts/: data_manifest.py  eda_gdsc2.py  explain.py  explain_torch_baseline.py  make_splits.py  preprocess_gdsc.py  test_linalg.py  train.py  train_baseline_ml.py  train_torch_baseline.py
src/tdrp/: __init__.py  config.py
src/tdrp/analysis/: __init__.py  interpretability.py  shap_analysis.py
src/tdrp/data/: __init__.py  dataloaders.py  gdsc2_preprocess.py  gdsc_loader.py  preprocess.py  splits.py
src/tdrp/featurizers/: __init__.py  drugs.py  omics.py
src/tdrp/models/: __init__.py  encoders.py  fusion.py  losses.py  vae.py
src/tdrp/training/: __init__.py  dataset.py  loop.py  metrics.py  trainer.py
src/tdrp/utils/: __init__.py  io.py  logging.py  seed.py
