[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tdrp"
version = "0.1.0"
description = "Tumor Drug Response Prediction - Multi-Modal Omics + Chemistry"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "torch",
  "pyyaml",
  "tqdm",
  "matplotlib",
  "shap",
  "seaborn",
  "openpyxl",
  "pyarrow",
]

[project.urls]
Homepage = "https://example.com"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
