[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tdrp"
version = "0.1.0"
description = "Tumor Drug Response Prediction - Multi-Modal Omics + Chemistry"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
  "numpy==1.26.4",
  "pandas==2.2.2",
  "scikit-learn==1.4.2",
  "torch==2.1.2",
  "pyyaml==6.0.1",
  "tqdm==4.66.4",
  "matplotlib==3.8.4",
  "shap==0.45.1",
  "seaborn==0.13.2",
  "openpyxl==3.1.2",
  "pyarrow==15.0.2",
]

[project.urls]
Homepage = "https://example.com"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
