[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tdrp"
version = "0.1.0"
description = "Tumor Drug Response Prediction - Multi-Modal Omics + Chemistry"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
  "numpy==1.26.4",
  "pandas==2.2.2",
  "scipy==1.11.4",
  "scikit-learn==1.4.2",
  "joblib==1.4.2",
  "threadpoolctl==3.5.0",
  "torch==2.1.2",
  "pyyaml==6.0.1",
  "tqdm==4.66.4",
  "matplotlib==3.8.4",
  "contourpy==1.2.1",
  "cycler==0.12.1",
  "fonttools==4.53.1",
  "kiwisolver==1.4.5",
  "pyparsing==3.1.2",
  "python-dateutil==2.9.0.post0",
  "pillow==10.3.0",
  "shap==0.45.1",
  "seaborn==0.13.2",
  "openpyxl==3.1.2",
  "et-xmlfile==1.1.0",
  "pyarrow==15.0.2",
  "numba==0.59.1",
  "llvmlite==0.42.0",
  "slicer==0.0.8",
  "cloudpickle==3.0.0",
  "packaging==24.1",
  "pytz==2024.1",
  "tzdata==2024.1",
  "six==1.16.0",
]

[project.urls]
Homepage = "https://example.com"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
